force-app/main/default/objects/ES_Project_Intake__c/ES_Project_Intake__c.object-meta.xml
<CustomObject>
    <label>ES Project Intake</label>
    <nameField>
        <label>ES Project Intake</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ES Project Intake</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>