force-app/main/default/objects/ES_Project_Intake__c/fields/Account_Exec__c.field-meta.xml
<CustomField>
    <fullName>Account_Exec__c</fullName>
    <label>Account Exec</label>
    <length>255</length>
    <type>Text</type>
</CustomField>