force-app/main/default/objects/ES_Project_Intake__c/fields/Actual_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Go_Live_Date__c</fullName>
    <label>Actual Go Live Date</label>
    <type>Date</type>
</CustomField>