force-app/main/default/objects/ES_Project_Intake__c/fields/Actual_Productive_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Actual_Productive_Hrs__c</fullName>
    <label>Actual Productive Hrs</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>