force-app/main/default/objects/ES_Project_Intake__c/fields/Actual_TTC__c.field-meta.xml
<CustomField>
    <fullName>Actual_TTC__c</fullName>
    <label>Actual TTC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>