force-app/main/default/objects/ES_Project_Intake__c/fields/Approval_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status_Notes__c</fullName>
    <label>Approval Status Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>