force-app/main/default/objects/ES_Project_Intake__c/fields/AR_Alias__c.field-meta.xml
<CustomField>
    <fullName>AR_Alias__c</fullName>
    <label>AR Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>