force-app/main/default/objects/ES_Project_Intake__c/fields/Billable_Hrs_Budget__c.field-meta.xml
<CustomField>
    <fullName>Billable_Hrs_Budget__c</fullName>
    <label>% Billable Hrs/ Budget</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>