force-app/main/default/objects/ES_Project_Intake__c/fields/Billable_Hrs_Budget_Health__c.field-meta.xml
<CustomField>
    <fullName>Billable_Hrs_Budget_Health__c</fullName>
    <label>Billable Hrs Budget Health</label>
    <length>255</length>
    <type>Text</type>
</CustomField>