force-app/main/default/objects/ES_Project_Intake__c/fields/Budget_Health__c.field-meta.xml
<CustomField>
    <fullName>Budget_Health__c</fullName>
    <label>Budget Health</label>
    <length>255</length>
    <type>Text</type>
</CustomField>