force-app/main/default/objects/ES_Project_Intake__c/fields/Budget_Used__c.field-meta.xml
<CustomField>
    <fullName>Budget_Used__c</fullName>
    <label>% Budget Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>