force-app/main/default/objects/ES_Project_Intake__c/fields/Closed_Won_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Date__c</fullName>
    <label>Closed/ Won Date</label>
    <type>Date</type>
</CustomField>