force-app/main/default/objects/ES_Project_Intake__c/fields/CSM_Contact__c.field-meta.xml
<CustomField>
    <fullName>CSM_Contact__c</fullName>
    <label>CSM Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>