force-app/main/default/objects/ES_Project_Intake__c/fields/CSM_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>CSM_Phone_Number__c</fullName>
    <label>CSM Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>