force-app/main/default/objects/ES_Project_Intake__c/fields/DevOps_Consultant_Contact__c.field-meta.xml
<CustomField>
    <fullName>DevOps_Consultant_Contact__c</fullName>
    <label>DevOps Consultant Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>