force-app/main/default/objects/ES_Project_Intake__c/fields/DevOps_Consultant_Email__c.field-meta.xml
<CustomField>
    <fullName>DevOps_Consultant_Email__c</fullName>
    <label>DevOps Consultant Email</label>
    <type>Email</type>
</CustomField>