force-app/main/default/objects/ES_Project_Intake__c/fields/DevOps_Consultant_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>DevOps_Consultant_Phone_Number__c</fullName>
    <label>DevOps Consultant Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>