force-app/main/default/objects/ES_Project_Intake__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>