force-app/main/default/objects/ES_Project_Intake__c/fields/Free_Project_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Free_Project_Hrs__c</fullName>
    <label>Free Project Hrs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>