force-app/main/default/objects/ES_Project_Intake__c/fields/Health__c.field-meta.xml
<CustomField>
    <fullName>Health__c</fullName>
    <label>Health</label>
    <length>255</length>
    <type>Text</type>
</CustomField>