force-app/main/default/objects/ES_Project_Intake__c/fields/Hosting_Type__c.field-meta.xml
<CustomField>
    <fullName>Hosting_Type__c</fullName>
    <label>Hosting Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>