force-app/main/default/objects/ES_Project_Intake__c/fields/Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Hours_Remaining__c</fullName>
    <label>Hours Remaining</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>