force-app/main/default/objects/ES_Project_Intake__c/fields/Index_Planned_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Index_Planned_End_Date__c</fullName>
    <label>Index Planned End Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>