force-app/main/default/objects/ES_Project_Intake__c/fields/Main_Customer_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Main_Customer_Contact_Name__c</fullName>
    <label>Main Customer Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>