force-app/main/default/objects/ES_Project_Intake__c/fields/Opp_ID__c.field-meta.xml
<CustomField>
    <fullName>Opp_ID__c</fullName>
    <label>Opp ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>