force-app/main/default/objects/ES_Project_Intake__c/fields/Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Opt_Out__c</fullName>
    <label>Opt-Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>