force-app/main/default/objects/ES_Project_Intake__c/fields/Other_Team_Members__c.field-meta.xml
<CustomField>
    <fullName>Other_Team_Members__c</fullName>
    <label>Other Team Members</label>
    <length>255</length>
    <type>Text</type>
</CustomField>