force-app/main/default/objects/ES_Project_Intake__c/fields/Paid_Hours_Consumed__c.field-meta.xml
<CustomField>
    <fullName>Paid_Hours_Consumed__c</fullName>
    <label>Paid Hours Consumed</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>