force-app/main/default/objects/ES_Project_Intake__c/fields/Paid_Hrs_Paid_Budget__c.field-meta.xml
<CustomField>
    <fullName>Paid_Hrs_Paid_Budget__c</fullName>
    <label>% Paid Hrs/ Paid Budget</label>
    <length>255</length>
    <type>Text</type>
</CustomField>