force-app/main/default/objects/ES_Project_Intake__c/fields/Paid_Hrs_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Paid_Hrs_Remaining__c</fullName>
    <label>Paid Hrs Remaining</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>