force-app/main/default/objects/ES_Project_Intake__c/fields/Paid_Project_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Paid_Project_Hrs__c</fullName>
    <label>Paid Project Hrs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>