force-app/main/default/objects/ES_Project_Intake__c/fields/Planned_TTC__c.field-meta.xml
<CustomField>
    <fullName>Planned_TTC__c</fullName>
    <label>Planned TTC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>