force-app/main/default/objects/ES_Project_Intake__c/fields/POC_Complete__c.field-meta.xml
<CustomField>
    <fullName>POC_Complete__c</fullName>
    <label>POC % Complete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>