force-app/main/default/objects/ES_Project_Intake__c/fields/Predecessors__c.field-meta.xml
<CustomField>
    <fullName>Predecessors__c</fullName>
    <label>Predecessors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>