force-app/main/default/objects/ES_Project_Intake__c/fields/Premium_Support__c.field-meta.xml
<CustomField>
    <fullName>Premium_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Premium Support</label>
    <type>Checkbox</type>
</CustomField>