force-app/main/default/objects/ES_Project_Intake__c/fields/Project_Link__c.field-meta.xml
<CustomField>
    <fullName>Project_Link__c</fullName>
    <label>Project Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>