force-app/main/default/objects/ES_Project_Intake__c/fields/Project_Manager_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Phone_Number__c</fullName>
    <label>Project Manager Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>