force-app/main/default/objects/ES_Project_Intake__c/fields/Project_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Opportunity_Name__c</fullName>
    <label>Project [Opportunity] Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>