force-app/main/default/objects/ES_Project_Intake__c/fields/PS_Type__c.field-meta.xml
<CustomField>
    <fullName>PS_Type__c</fullName>
    <label>PS Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>