force-app/main/default/objects/ES_Project_Intake__c/fields/PS_Value__c.field-meta.xml
<CustomField>
    <fullName>PS_Value__c</fullName>
    <label>PS Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>