force-app/main/default/objects/ES_Project_Intake__c/fields/Sales_Solution_Architect__c.field-meta.xml
<CustomField>
    <fullName>Sales_Solution_Architect__c</fullName>
    <label>Sales Solution Architect</label>
    <length>255</length>
    <type>Text</type>
</CustomField>