force-app/main/default/objects/ES_Project_Intake__c/fields/SF_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>SF_Project_ID__c</fullName>
    <label>SF Project ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>