force-app/main/default/objects/ES_Project_Intake__c/fields/Solution_Architect_Contact__c.field-meta.xml
<CustomField>
    <fullName>Solution_Architect_Contact__c</fullName>
    <label>Solution Architect Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>