force-app/main/default/objects/ES_Project_Intake__c/fields/Solution_Architect_Email__c.field-meta.xml
<CustomField>
    <fullName>Solution_Architect_Email__c</fullName>
    <label>Solution Architect Email</label>
    <type>Email</type>
</CustomField>