force-app/main/default/objects/ES_Project_Intake__c/fields/Solution_Architect_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Solution_Architect_Phone_Number__c</fullName>
    <label>Solution Architect Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>