force-app/main/default/objects/ES_Project_Intake__c/fields/SOW_PoP_End_Date__c.field-meta.xml
<CustomField>
    <fullName>SOW_PoP_End_Date__c</fullName>
    <label>SOW PoP End Date</label>
    <type>Date</type>
</CustomField>