force-app/main/default/objects/ES_Project_Intake__c/fields/Timezone_of_DevOps_Team__c.field-meta.xml
<CustomField>
    <fullName>Timezone_of_DevOps_Team__c</fullName>
    <label>Timezone of DevOps Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>