force-app/main/default/objects/ES_Project_Intake__c/fields/Total_Budget_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget_Hrs__c</fullName>
    <label>Total Budget (Hrs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>