force-app/main/default/objects/ES_Project_Intake__c/fields/TTV__c.field-meta.xml
<CustomField>
    <fullName>TTV__c</fullName>
    <label>TTV</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>