force-app/main/default/objects/ES_Project_Intake__c/fields/Vendor_Agency__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Agency__c</fullName>
    <label>Vendor/ Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>