force-app/main/default/objects/ES_Project_Intake__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Health__c</columns>
    <columns>Project_Link__c</columns>
    <columns>Approval_Status_Notes__c</columns>
    <columns>Notes__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Project_ID__c</columns>
    <columns>SF_Project_ID__c</columns>
    <columns>Account_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>